--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@
   </div>
 </body>
 <!-- partial -->
+  <div id="cornerMessage">Always Be Happy, You look cute and beautiful when you smile🥰🤌🏻
+  🌸</div>
   <script  src="./script.js"></script>
 
 </body>
