--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <link rel="stylesheet" href="./style.css">
 
 </head>
+  <style>
+#cornerMessage {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  background: rgba(0,0,0,0.6);
+  color: white;
+  padding: 8px 12px;
+  border-radius: 10px;
+  font-size: 14px;
+  opacity: 0;
+  z-index: 9999;
+  transition: opacity 1s ease;
+}
+  </style>
 <body>
 <!-- partial:index.partial.html -->
 <body class="not-loaded">
