--- a/index.html
+++ b/index.html
@@ -326,6 +326,11 @@
   <div id="cornerMessage">Always Be Happy, You look cute and beautiful when you smile🥰🤌🏻
   🌸</div>
   <script  src="./script.js"></script>
-
+<script>
+setTimeout(() => {
+  const msg = document.getElementById("cornerMessage");
+  if (msg) msg.style.opacity = "1";
+}, 1800);
+</script>
 </body>
 </html>
