--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 <body>
 <!-- partial:index.partial.html -->
 <body class="not-loaded">
+  <div id="startMessage">
+  <div class="start-text">
+    Tap anywhere 🌸
+  </div>
+  </div>
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
