--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="not-loaded">
   <div id="startMessage">
   <div class="start-text">
-    Tap anywhere 🌸
+    For YOU, Always be happy and keep smiling yaar🤌🏻🥹
   </div>
   </div>
   <div class="night"></div>
