--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="not-loaded">
   <div id="startMessage">
   <div class="start-text">
-    For YOU, Always be happy and keep smiling yaar🤌🏻🥹
+   <p>FOR YASHIKA, Always be happy and keep smiling. you look so cute and beautiful when you smile🥰</p>
   </div>
   </div>
   <div class="night"></div>
