--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 <!-- partial:index.partial.html -->
 <body class="not-loaded">
   <div id="startMessage">
-  <div class="start-text">
-   <p>FOR YASHIKA, Always be happy and keep smiling. you look so cute and beautiful when you smile🥰</p>
+  <div class="msg-box">
+    For YOU 💛<br>
+    Always be happy and keep smiling yaar 🥹✨
+  </div>
   </div>
   </div>
   <div class="night"></div>
