--- a/index.html
+++ b/index.html
@@ -339,5 +339,8 @@ setTimeout(() => {
   if (msg) msg.style.opacity = "1";
 }, 1800);
 </script>
+  <audio id="bgMusic" preload="auto">
+  <source src="music.mp3" type="audio/mpeg">
+  </audio>
 </body>
 </html>
