--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 <body>
 <!-- partial:index.partial.html -->
 <body class="not-loaded">
-  <div id="startMessage">
+  <div id="startMessage" onclick="startExperience()">
   <div class="msg-box">
     For YOU 💛<br>
-    Always be happy and keep smiling yaar 🥹✨
+    Always be happy and keep smiling yaar 🥹✨<br><br>
+    <small>(Tap anywhere)</small>
   </div>
   </div>
   </div>
